--- a/styles/sass/project.scss
+++ b/styles/sass/project.scss
@@ -1,9 +1,35 @@
-
 $bg-color: #1d1d21;
 $gutter: 1.5em;
-$brand-color: #eaa075;
+$brand-color: #ed9f80;
+$brand-color2: #f4b9a6;
 $font-head: 2em;
 $font-body:1em;
+$font-xs: 0.5em;
+$font-bold: 700;
+$font-family-1: 'adamnormal', sans-serif;
+$font-family-2: 'bellotaregular', sans-serif;
+
+@font-face {
+    font-family: 'adamnormal';
+    src: url('../../font/adam-webfont.woff2') format('woff2'),
+         url('../../font/adam-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'bellotaregular';
+    src: url('../../bellota-regular-webfont.woff2') format('woff2'),
+         url('../../bellota-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'bellotalight';
+    src: url('../../bellota-light-webfont.woff2') format('woff2'),
+         url('../../bellota-light-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 body {
   position: relative;
