update of the last commit

--- a/styles/css/all-projects.css
+++ b/styles/css/all-projects.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Work+Sans:300");
 @font-face {
   font-family: 'adamnormal';
   src: url("../../font/adam-webfont.woff2") format("woff2"), url("../../font/adam-webfont.woff") format("woff");
