--- a/styles/sass/global.scss
+++ b/styles/sass/global.scss
@@ -8,6 +8,9 @@ $font-xs: 0.5em;
 $font-bold: 700;
 $font-family-1: 'adamnormal', sans-serif;
 $font-family-2: 'bellotaregular',serif;
+$font-family-3: 'Work Sans', sans-serif;
+
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:300');
 
 @font-face {
     font-family: 'adamnormal';
@@ -30,6 +33,8 @@ $font-family-2: 'bellotaregular',serif;
     font-weight: normal;
     font-style: normal;
 }
+
+
 
 .main__home-landing__subtitle, .main__home-landing__logo {
   font-family: $font-family-2;
@@ -225,6 +230,8 @@ footer {
 footer p {
   line-height: 50px;
   margin-bottom: 0;
+  color: $brand-color2;
+  font-family: $font-family-1;
 }
 @media (min-width:1200px) {
   .affix,
