--- a/styles/sass/project.scss
+++ b/styles/sass/project.scss
@@ -8,6 +8,10 @@ $font-xs: 0.5em;
 $font-bold: 700;
 $font-family-1: 'adamnormal', sans-serif;
 $font-family-2: 'bellotaregular', sans-serif;
+$font-family-3: 'Work Sans', sans-serif;
+
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:300');
+
 
 @font-face {
     font-family: 'adamnormal';
