--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -17,6 +17,10 @@
   font-weight: normal;
   font-style: normal;
 }
+a.active, .active a, .active, li.active {
+  background-color: transparent !important;
+}
+
 .main__home-landing__subtitle, .main__home-landing__logo {
   font-family: "bellotaregular", serif;
 }
@@ -52,6 +56,11 @@
   float: none;
   height: 70px;
 }
+@media only screen and (max-width: 500px) {
+  .my-navbar-wrapper__nav {
+    height: auto;
+  }
+}
 .my-navbar-wrapper__nav--list {
   text-transform: uppercase;
   display: inline-block !important;
@@ -64,12 +73,22 @@
 .my-navbar-wrapper__nav--list:not(:first-child) {
   padding-left: 20px;
 }
+@media only screen and (max-width: 500px) {
+  .my-navbar-wrapper__nav--list:not(:first-child) {
+    padding-left: 0;
+  }
+}
 .my-navbar-wrapper__nav--list:first-child {
   padding-right: 20px;
   padding-left: 0;
 }
 .my-navbar-wrapper__nav--list:last-child {
   padding-right: 40px;
+}
+@media only screen and (max-width: 500px) {
+  .my-navbar-wrapper__nav--list:last-child {
+    padding-right: 0;
+  }
 }
 @media only screen and (max-width: 500px) {
   .my-navbar-wrapper__nav--list {
