--- a/styles/sass/global.scss
+++ b/styles/sass/global.scss
@@ -35,7 +35,7 @@ $font-family-3: 'Work Sans', sans-serif;
 }
 
 
-a.active, .active a, .active, li.active {
+a.active, .active a, .active, li.active, a{
   background-color: transparent !important;
 }
 
