--- a/styles/sass/all-projects.scss
+++ b/styles/sass/all-projects.scss
@@ -1,4 +1,5 @@
 $bg-color: #1d1d21;
+$light-bg: #E8CFC5;
 $gutter: 1.5em;
 $brand-color: #ed9f80;
 $brand-color2: #f4b9a6;
@@ -35,6 +36,8 @@ $font-family-3: 'Work Sans', sans-serif;
     font-style: normal;
 }
 
+body {background-color: $light-bg;}
+
 .main {
   background-color: $bg-color;
   padding: none;
@@ -54,7 +57,7 @@ $font-family-3: 'Work Sans', sans-serif;
       padding-top:$gutter;
       display: block;
       margin: 0 auto;
-      width: 150px;
+      width: 320px;
         @media only screen and (max-width: 500px) {
           display: none;
         }
@@ -78,7 +81,9 @@ $font-family-3: 'Work Sans', sans-serif;
   margin: 0;
   font-size: 0.95em;
   .navbar {
-    margin: 70px auto 0 auto;
+    font-family: $font-family-1;
+    margin: 35px auto 0 auto;
+    font-weight: bolder;
     @media only screen and (max-width: 500px) {
       margin: 35px auto 0 auto;
     }
@@ -90,6 +95,12 @@ $font-family-3: 'Work Sans', sans-serif;
         display: inline-block;
         padding: 5px 8px;
         margin: 0 7px;
+        a {
+          color: $bg-color;
+          &:hover {
+            font-weight: bolder;
+          }
+        }
       }
       .current a, a:hover {
         border-bottom: 1px $bg-color solid;
@@ -107,6 +118,7 @@ $font-family-3: 'Work Sans', sans-serif;
 
 //portfolio-mixitup
 .portfolio-container {
+  min-height: 400px;
   padding: 2% 2% 0;
   -webkit-backface-visibility: hidden;
   text-align: center;
@@ -151,24 +163,24 @@ $font-family-3: 'Work Sans', sans-serif;
   padding: 5px;
   .project-image1 {
     display: block;
-    background: url(../images/test.jpg) no-repeat center top;
+    background: url(../../images/curranbw.jpg) no-repeat center top;
     height: 300px;
     overflow: hidden;
-    background-size: Auto 300px;
+    background-size: cover;
   }
   .project-image2 {
     display: block;
-    background: url(../images/test2.jpg) no-repeat center top;
+    background: url(../../images/sftravel.jpg) no-repeat center top;
     height: 300px;
     overflow: hidden;
-    background-size: Auto 300px;
+    background-size: cover;
   }
   .project-image3 {
     display: block;
-    background: url(../images/test3.jpg) no-repeat center top;
+    background: url(../../images/amongstrangers.jpg) no-repeat center top;
     height: 300px;
     overflow: hidden;
-    background-size: Auto 300px;
+    background-size: cover;
   }
 }
 
@@ -187,7 +199,7 @@ $font-family-3: 'Work Sans', sans-serif;
   opacity: 0;
   position: relative;
   .color-box {
-    background-color: lightgrey;
+    background-color: $brand-color;
     height: 100%;
     width: 100%;
     display: flex;
@@ -200,6 +212,12 @@ $font-family-3: 'Work Sans', sans-serif;
     position: absolute;
     padding: 40px 50px;
     background-color: #fff;
+    opacity: 0.7;
+    p {
+      font-size: 2em;
+      font-family: $font-family-2;
+      color: $bg-color;
+    }
   }
 }
 
