--- a/styles/sass/project.scss
+++ b/styles/sass/project.scss
@@ -233,5 +233,7 @@ section:last-child {
 
 //thank-you
 .application {
-  padding: 150px 0;
+  padding: 50px 0;
+  background-color: $brand-color;
+  margin-top: 50px;
 }
