--- a/styles/sass/project.scss
+++ b/styles/sass/project.scss
@@ -1,8 +1,10 @@
 $bg-color: #1d1d21;
+$bg-color2: #3e3e46;
 $light-bg: #E8CFC5;
 $gutter: 1.5em;
 $brand-color: #ed9f80;
 $brand-color2: #f4b9a6;
+$brand-color3: #daae9c;
 $font-head: 2em;
 $font-body:1em;
 $font-xs: 0.5em;
@@ -11,7 +13,7 @@ $font-family-1: 'adamnormal', sans-serif;
 $font-family-2: 'bellotaregular', sans-serif;
 $font-family-3: 'Work Sans', sans-serif;
 
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:300');
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:300,400,500');
 
 
 @font-face {
@@ -78,7 +80,7 @@ body {
 
 //project-hero
 .project-hero {
-  background: url(../../images/curranbw.jpg) no-repeat 50% 45%;
+  background: url(../../images/amongstrangers.jpg) no-repeat 50% 45%;
   background-size: cover;
   width: 100%;
   height: 500px;
@@ -95,20 +97,8 @@ body {
   }
   img {
     position: absolute;
-    width: 350px;
-    // background-color: #fff;
+    width: 400px;
   }
-  // height: 100%;
-  // span {
-  //   font-size: 4em;
-  //   font-family: "bellotaregular", sans-serif;
-  //   color: #ed9f80;
-  //   padding: 20px 40px;
-  //   background-color: $bg-color;
-  // }
-  // @media only screen and (max-width: 500px) {
-  //   height: 350px;
-  // }
 }
 
 .content-area {
@@ -116,9 +106,6 @@ body {
   @media only screen and (max-width: 990px) {
     margin: -2px -15px 0 -15px;
   }
-  // @media only screen and (max-width: 500px) {
-  //   margin-left: 1em;
-  // }
 }
 
 //table of contents
@@ -134,7 +121,7 @@ body {
 
 #nav li a p {
   font-size: 1.2em;
-  font-family: $font-family-3;
+  font-family: $font-family-2;
   font-weight: bolder;
 }
 
@@ -236,4 +223,213 @@ section:last-child {
   padding: 50px 0;
   background-color: $brand-color;
   margin-top: 50px;
+}
+
+
+//content division styling
+
+
+#overview {
+  height: 500px;
+  color: $bg-color;
+  .content-div {
+    // width:600px;
+    height: 500px;
+    margin: 0 auto;
+  }
+  .content-overview {
+    background: url(../../images/overview.jpg) no-repeat 50% 60%;
+    background-size: cover;
+    width: 100%;
+  }
+  .color-box {
+    height: 500px;
+    background-color: $brand-color3;
+    width: 100%;
+    position: absolute;
+    opacity: 0.85;
+  }
+  .pad-box {
+    margin: 0 auto;
+    padding: 50px;
+    width: 750px;
+    // color: $bg-color;
+    // z-index: 9999;
+    position: absolute;
+    // background-color: #fff;
+    h2 {
+      padding-bottom: 30px;
+      font-family: $font-family-1;
+      text-transform: uppercase;
+      font-weight: bolder;
+      color: $bg-color;
+      border-bottom: 2px solid $bg-color;
+      // background-color: $bg-color;
+    }
+    h4 {
+      font-style: italic;
+      padding: 20px 0;
+    }
+    p {
+      font-family: $font-family-3;
+      font-weight: 400;
+    }
+  }
+}
+
+#brand-video {
+  display: none;
+  height: 600px;
+  background-color: $bg-color2;
+  color: $brand-color3;
+  .content-div {
+    height: 500px;
+    width: 100%;
+  }
+  .content-video {
+
+  }
+  .pad-box {
+    margin: 0 auto;
+    padding: 50px;
+    h2 {
+      padding-bottom: 30px;
+      font-family: $font-family-1;
+      text-transform: uppercase;
+      font-weight: bolder;
+      border-bottom: 2px solid $brand-color3;
+    }
+    iframe {
+      padding-top: 20px;
+      width: 650px;
+      height: 370px;
+    }
+  }
+}
+
+#branding-research {
+  height: auto;
+  background-color: $brand-color3;
+  color: $bg-color;
+  .pad-box {
+    margin: 0 auto;
+    padding: 50px;
+    h2 {
+      padding-bottom: 20px;
+      font-family: $font-family-1;
+      text-transform: uppercase;
+      font-weight: bolder;
+      // color: $bg-color;
+      border-bottom: 2px solid $bg-color;
+    }
+  }
+  #target-market {
+    color: $bg-color;
+    border-bottom: 1px solid $bg-color;
+    .pad-box {
+      margin: 0 auto;
+      padding: 50px;
+      img {
+        height: 200px;
+        display: block;
+        margin: 0 auto;
+      }
+      h3 {
+        font-family: $font-family-2;
+        font-weight: bolder;
+        // color: $bg-color;
+        padding-top: 20px;
+        // border-bottom: 2px solid $bg-color;
+      }
+      p {
+        font-family: $font-family-3;
+        span  {
+          font-weight: 600;
+        }
+      }
+    }
+  }
+  #competition {
+    border-bottom: 1px solid $bg-color;
+    color: $bg-color;
+    .pad-box {
+      margin: 0 auto;
+      padding: 30px 50px;
+      // background-color: #fff;
+      h3 {
+        font-family: $font-family-2;
+        font-weight: bolder;
+        // color: $bg-color;
+      }
+      img {
+        width: 200px;
+        padding: 30px 0 0 0;
+        display: block;
+      }
+      p {
+        padding-top: 10px;
+        font-family: $font-family-3;
+      }
+    }
+  }
+  #inspiration {
+    border-bottom: 1px solid $bg-color;
+    color: $bg-color;
+    .pad-box {
+      margin: 0 auto;
+      padding: 30px 50px;
+      // background-color: #fff;
+      h3 {
+        font-family: $font-family-2;
+        font-weight: bolder;
+        // color: $bg-color;
+      }
+      img {
+        height: 200px;
+        padding: 30px 0 0 0;
+        display: block;
+        // float: left;
+      }
+      p {
+        padding-top: 10px;
+        font-family: $font-family-3;
+        // float: right;
+        span  {
+          font-weight: 600;
+        }
+      }
+    }
+  }
+  #process {
+    border-bottom: 1px solid $bg-color;
+    padding-bottom: 50px;
+    .pad-box {
+      margin: 0 auto;
+      padding: 30px 50px;
+      // background-color: #fff;
+      h3 {
+        font-family: $font-family-2;
+        font-weight: bolder;
+        // color: $bg-color;
+      }
+      .responsive {
+        position: relative;
+        width: 600px;
+          img {
+            width: 600px;
+          }
+      }
+      // .mini-slide-wrap {
+      //   .slider-nav {
+      //     img {
+      //       height: 70px;
+      //     }
+      //   }
+      // }
+      // p {
+      //   padding-top: 10px;
+      //   font-family: $font-family-3;
+      // }
+    }
+  }
 }
